[project]
name = "copperhead-software"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anytree>=2.13.0",
    "canopen>=2.3.0",
    "cbor>=1.0.0",
    "clang-format>=15.0.0",
    "colorama>=0.4.6",
    "coverage>=7.8.0",
    "gcovr>=6.0",
    "gitlint>=0.19.1",
    "gitpython>=3.1.41",
    "graphviz>=0.20.3",
    "intelhex>=2.3.0",
    "junit2html>=31.0.2",
    "junitparser>=3.2.0",
    "lpc-checksum>=3.0.0",
    "lxml>=5.3.0",
    "mock>=4.0.1",
    "mypy>=1.15.0",
    "natsort>=8.4.0",
    "packaging>=24.2",
    "patool>=4.0.0",
    "pillow>=10.3.0",
    "ply>=3.10",
    "progress>=1.6",
    "psutil>=5.6.6",
    "pyelftools>=0.29",
    "pygithub>=2.6.1",
    "pykwalify>=1.8.0",
    "pylink-square>=1.6.0",
    "pylint>=3",
    "pyocd>=0.35.0",
    "pyserial>=3.5",
    "pytest>=8.3.5",
    "python-can>=4.3.0",
    "python-magic>=0.4.27 ; sys_platform != 'win32'",
    "python-magic-bin>=0.4.14 ; sys_platform == 'win32'",
    "pyyaml>=6.0",
    "requests>=2.32.0",
    "ruff==0.8.1",
    "semver>=3.0.4",
    "sphinx-lint>=1.0.0",
    "tabulate>=0.9.0",
    "tqdm>=4.67.1",
    "unidiff>=0.7.5",
    "west>=0.14.0",
    "windows-curses>=2.4.1 ; sys_platform == 'win32'",
    "yamllint>=1.37.0",
]
